@@ -4,22 +4,26 @@ Copyright 2011 The Apache Software Foundation
 This product includes/uses software developed by The Apache Software
 Foundation (http://www.apache.org/).
 
-This product includes/uses Jline (http://jline.sourceforge.net/)
-Copyright (c) 2002-2006, Marc Prud'hommeaux <mwp1@cornell.edu>
-All rights reserved.
+This product includes software developed by The JDBM Project
+(http://jdbm.sourceforge.net/).
 
-This product includes/uses JavaEWAH (http://code.google.com/p/javaewah/)
-Copyright 2009-2011, Daniel Lemire
+This product includes/uses ANTLR (http://www.antlr.org/),
+Copyright (c) 2003-2008, Terrence Parr.
 
-This product includes/uses ASM (http://asm.ow2.org/)
-Copyright (c) 2000-2005 INRIA, France Telecom
-All rights reserved.
+This product includes/uses StringTemplate (http://www.stringtemplate.org/),
+Copyright (c) 2008, Terrence Parr.
 
-This product includes/uses JSON (http://www.json.org/)
+This product includes/uses ASM (http://asm.ow2.org/),
+Copyright (c) 2000-2005 INRIA, France Telecom.
+
+This product includes/uses org.json (http://www.json.org/java/index.html),
 Copyright (c) 2002 JSON.org
 
-This product includes/uses ANTLR (http://www.antlr.org/)
-Copyright (c) 2003-2006 Terence Parr
+This product includes/uses SLF4J (http://www.slf4j.org/),
+Copyright (c) 2004-2008 QOS.ch
+
+This product includes/uses Jline (http://jline.sourceforge.net/)
+Copyright (c) 2002-2006, Marc Prud'hommeaux <mwp1@cornell.edu>
 All rights reserved.
 
 This product includes/uses DataNucleus (http://www.datanucleus.org/)
