@@ -15,6 +15,8 @@ Release 0.1.0
     (Krishna Kumar via macyang)
 
   IMPROVEMENTS
+    HCAT-78. Update notice.txt and headers and add Disclaimer.txt (hashutosh) 
+
     HCAT-54. Javadoc is not being built as part of HCatalog docs (hashutosh) 
 
     HCAT-44. Add a releaseaudit target to build.xml (gates)
